--- a/css/style.css
+++ b/css/style.css
@@ -172,10 +172,7 @@ header {
   border: 1px solid #000;
 }
 .main-money {
-  margin-top: -4rem;
-}
-.main-money_img {
-  width: 280px;
+  margin-top: -6rem;
 }
 .items {
   margin-top: 6rem;
@@ -211,9 +208,16 @@ header {
   }
   .header-call {
     margin-top: 1rem;
+    text-align: center;
+    font-size: 5rem;
+  }
+  .header-btn_btn {
+    margin-top: -8rem;
+    margin-right: 3rem;
   }
   .main-title h1 {
     font-size: 23px;
+    margin-top: -5rem;
   }
   .main-list {
     margin-top: 0;
@@ -224,24 +228,86 @@ header {
   .main-submit {
     float: none;
     margin-top: -5rem;
-    height: 380px;
+    width: 725px;
+    height: 350px;
   }
   .main-money {
-    margin-top: 8rem;
-    margin-left: 5rem;
+    display: none;
   }
 }
 @media (max-width: 768px) {
+  header {
+    height: 150vh;
+  }
+  .header-title {
+    margin: 0;
+    float: left;
+    margin-top: 2rem;
+  }
   .header-call {
-    font-size: 21px;
+    font-size: 35px;
     margin-top: 3.2rem;
+    margin-left: -2rem;
+  }
+  .header-btn {
+    margin: 0;
+    text-align: center;
+    margin-top: 2rem;
   }
   .header-btn_btn {
     float: none;
   }
+  .main-submit {
+    width: 100%;
+  }
+  .main-money {
+    display: none;
+  }
 }
 @media (max-width: 738px) {
+  header {
+    height: 110vh;
+  }
+  .header-logo {
+    margin: 0;
+  }
+  .header-title {
+    margin: 0;
+  }
+  .header-btn {
+    margin: 0;
+    padding: 0;
+    margin-top: 2rem;
+    text-align: center;
+  }
+  .header-btn_btn {
+    width: 80%;
+    margin: 0;
+    font-size: 3rem;
+  }
+  .header-call {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    margin-top: 2rem;
+    font-size: 4rem;
+  }
+  .main-title h1 {
+    font-size: 25px;
+    margin: 0;
+    padding: 0;
+  }
   .main-submit {
-    height: 350px;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 400px;
+    float: right;
+  }
+  .main .input-1 {
+    margin-top: -10px;
+  }
+  .main-money {
+    display: none;
   }
 }
