--- a/css/style.less
+++ b/css/style.less
@@ -205,10 +205,7 @@ header {
 		}
 	}
 	&-money {
-		margin-top: -4rem;
-		&_img {
-			width: 280px;
-		}
+		margin-top: -6rem;
 	}
 }
 .items {
@@ -252,11 +249,20 @@ header {
 		}
 		&-call {
 			margin-top: 1rem;
+			text-align: center;
+			font-size: 5rem;
+		}
+		&-btn {
+			&_btn {
+				margin-top: -8rem;
+				margin-right: 3rem;
+			}
 		}
 	}
 	.main {
 		&-title h1 {
 			font-size: 23px;
+			margin-top: -5rem;
 		}
 		&-list {
 			margin-top: 0;
@@ -267,31 +273,98 @@ header {
 		&-submit {
 			float: none;
 			margin-top: -5rem;
-			height: 380px;
+			width: 725px;
+			height: 350px;
 		}
 		&-money {
-			margin-top: 8rem;
-			margin-left: 5rem;
+			display: none;
 		}
 	}
 }
 @media (max-width: 768px) {
+	header {
+		height: 150vh;
+	}
 	.header {
+		&-title {
+			margin: 0;
+			float: left;
+			margin-top: 2rem;
+		}
 		&-call {
-			font-size: 21px;
+			font-size: 35px;
 			margin-top: 3.2rem;
+			margin-left: -2rem;
 		}
 		&-btn {
+			margin: 0;
+			text-align: center;
+			margin-top: 2rem;
 			&_btn {
 				float: none;
 			}
 		}
 	}
-}
-@media (max-width: 738px) {
 	.main {
 		&-submit {
-			height: 350px;
+			width: 100%;
+		}
+		&-money {
+			display: none;
+		}
+	}
+}
+@media (max-width: 738px) {
+	header {
+		height: 110vh;
+	}
+	.header {
+		&-logo {
+			margin: 0;
+		}
+		&-title {
+			margin: 0;
+		}
+		&-btn {
+			margin: 0;
+			padding: 0;
+			margin-top: 2rem;
+			text-align: center;
+			&_btn {
+				width: 80%;
+				margin: 0;
+				font-size: 3rem;
+			}
+		}
+		&-call {
+			text-align: center;
+			margin: 0;
+			padding: 0;
+			margin-top: 2rem;
+			font-size: 4rem;
+		}
+	}
+	.main {
+		&-title h1 {
+			font-size: 25px;
+			margin: 0;
+			padding: 0;
+		}
+		&-submit {
+			margin: 0;
+			padding: 0;
+			width: 100%;
+			height: 400px;
+			float: right;
+		}
+
+		.input {
+			&-1 {
+				margin-top: -10px;
+			}
+		}
+		&-money {
+			display: none;
 		}
 	}
 }
